crates/hir-ty/tests/snapshots/jls_interfaces__lambda_needs_functional_interface.snap
---
source: crates/hir-ty/tests/jls_interfaces.rs
assertion_line: 124
expression: out
---
FILE /src/com/example/NotFI.java:
package com.example;

interface NotFI {
    int f(int x);
    int g(int x);
}

FILE /src/com/example/UsesFI.java:
package com.example;

class UsesFI {
    void m() {
        NotFI lam = x -> x;
    }
}

method m(): void
  locals: l0: com.example.NotFI
  exprs: e1: <error>
  diags: e1@4:19: not-a-functional-interface: com.example.NotFI is not a functional interface
