crates/hir-ty/tests/snapshots/jls_interfaces__qualified_super_invocation.snap
---
source: crates/hir-ty/tests/jls_interfaces.rs
assertion_line: 157
expression: out
---
FILE /src/com/example/Greets.java:
package com.example;

interface Greets {
    default String name() { return "g"; }
}

class Impl implements Greets {
    public String name() { return Greets.super.name(); }
}

method name(): java.lang.String
  locals: 
  exprs: e0: java.lang.String
method name(): java.lang.String
  locals: 
  exprs: e2: java.lang.String
